// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expenses summary with a single expense 1`] = `
<div>
  <h1>
    Displaying 
    1
     
    expense
     with a sum of 
    $2.50
  </h1>
</div>
`;

exports[`should render expenses summary with multiple expenses 1`] = `
<div>
  <h1>
    Displaying 
    3
     
    expenses
     with a sum of 
    $7.00
  </h1>
</div>
`;
